<resources>
    <string name="app_name">bulldi</string>
    <string name="connect">Connect</string>
    <string name="title_device_list">Device List</string>
    <string name="device">Device</string>
    <string name="header">Available BLE Devices</string>
    <string name="disconnected">Device is not connected</string>
    <string name="control">Done</string>
    <string name="bt_not_supported">Bluetooth is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bt_on">Bluetooth was turned  on</string>
    <string name="bt_not_on">Bluetooth was not turned on</string>
    <string name="app_closing">Exiting bulldi app</string>
    <string-array name="device_filter"><item>SensorTag</item><item>SensorTag2</item><item>Bulldi</item><item>bulldi</item><item>CC2650 SensorTag</item></string-array>
    <string name="nodevice">There are no SensorTags advertising within range. Please push the side button on the SensorTag to start advertising.</string>
    <string name="scan_advice">The Android device is not scanning. Please tap \'Scan\' to scan for SensorTags.</string>
    <string name="bt_adapter_disable">Disable Bluetooth adapter</string>
    <string name="bt_adapter_reset">Reset Bluetooth adapter</string>
    <string name="prefs">Preferences</string>
    <string name="progress"></string>
    <string name="agree">I agree</string>
    <string name="fwupdate">Firmware update</string>
    <string name="bt">Bluetooth Adapter</string>
    <string name="sthome">SensorTag Home</string>
    <string name="tie2e">TI E2E Community</string>
    <string name="license">License</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="dev_addr">Device address</string>
    <string name="image">Image</string>
    <string name="keys">Keys</string>
    <string name="acc">Accelerometer</string>
    <string name="mag">Magnetometer</string>
    <string name="lux">Luxometer</string>
    <string name="gyro">Gyroscope</string>
    <string name="hum">Humidity</string>
    <string name="bar">Barometer</string>
    <string name="tAmb">Ambience Temperature</string>
    <string name="tObj">Object Temperature</string>
    <string name="xyz3">x:\ny:\nz:\n</string>
    <string name="empty3">*\n*\n*\n</string>
    <string name="unitDegSec3">deg/s\ndeg/s\ndeg/s\n</string>
    <string name="unitG3">g\ng\ng\n</string>
    <string name="unitT3">uT\nuT\nuT\n</string>
    <string name="empty1">*\n</string>
    <string name="unitDeg">deg/C\n</string>
    <string name="unitRH">%rH\n</string>
    <string name="unitPA_Meter">nPA\nmeter</string>
    <string name="unitLux">Lux\n</string>
    <string name="unitTemp">C</string>
    <string name="unitSymbolTemp">&#xb0;</string>
    <string name="title_oad">Firmware Update (OAD)</string>
    <string name="start_prog">Start Programming</string>
    <string name="cancel">Cancel</string>
    <string name="prog_ogoing">NB! Not permitted to close this view during OAD transfer</string>
    <string name="load_image_a">Image A</string>
    <string name="load_image_b">Image B</string>
    <string name="load_image_c">Custom</string>
    <string name="no_image">Not an OAD image</string>
    <string name="no_image_sel">No image selected</string>
    <string name="new_image">Update image:</string>
    <string name="cur_image">Device image:</string>
    <string name="idle">idle</string>
    <string name="btn_txt_confirm">Confirm</string>
    <string name="discovering_services">Discovering Services</string>
    <string name="oad_dialog_old_fw_0_89_cc26xx">Firmware version 0.89 detected, to upgrade to latest firmware we will need to upgrade in two stages, first stage to v0.91 and second stage to v1.01</string>
    <string name="oad_dialog_programming_finished">Firmware upgrade finished, the device should now disconnect, this will be evident by the device restarting and LED start blinking again. \r\n\r\nIf this should not happen, upgrade failed, you should try to upgrade again.</string>
    <string name="progress_title">Discovering Services</string>
    <string name="progress_info">Discovered x of x services</string>
    <string name="oad_dialog_title">OAD Programming</string>
    <string name="oad_dialog_progress">0.0%</string>
    <string name="oad_file_select_button">Browse</string>
    <string name="cloud_config_dialog_title">Cloud Configuration</string>
    <string name="cloud_config_dialog_cloud_service">Cloud service :</string>
    <string name="cloud_config_dialog_username">Username :</string>
    <string name="cloud_config_dialog_password">Password :</string>
    <string name="cloud_config_dialog_device_id">Device id:</string>
    <string name="cloud_config_dialog_cloud_broker_address">Broker Address :</string>
    <string name="cloud_config_dialog_broker_port">Broker Port :</string>
    <string name="cloud_config_dialog_publish_topic">Publish Topic :</string>
    <string name="cloud_config_dialog_clean_session_checkbox_title">Clean session</string>
    <string name="cloud_config_dialog_use_ssl_checkbox_title">Use SSL</string>
    <string name="cloud_config_dialog_save_button_text">Save settings</string>
    <string name="defaultnumber">01065901333</string>
    <string name="smsinputtext">Fire, come please</string>
    <string-array name="cloud_config_dialog_cloud_services_array">
        <item>IBM IoT Quick Start</item>
        <item>IBM IoT Foundation</item>
        <item>Custom</item>
    </string-array>
    <string name="test_start">Test start</string>
    <string name="facebook_app_id">956245164411786</string>
    <string name="kakao_app_key">3a030f3e3dc151f0cb025a20ee30aa16</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string-array name="usermgmg_gender_types">
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_scan">Scan</string>
    <string name="button_rescan">Rescan</string>
    <string name="button_submit">Submit</string>
    <string name="button_close">Close</string>
    <string name="button_out">Out of service</string>
    <string name="button_signup">Sign me up</string>
    <string name="button_upgrade">Upgrade</string>
    <string name="button_update">Update</string>
    <string name="button_5sec">5 Sec.</string>
    <string name="button_sessionOut">Session Out</string>
    <string name="button_setAlias">Change bulldi name</string>
    <string name="toast_contact_notify">Share emergencies will be automatically registered to your friends</string>
    <string name="toast_no_contact">No Contact Found!!!</string>
    <string name="toast_sent_email">Sent email</string>
    <string name="toast_sent_error">Sending error. Please check your network connection!</string>
    <string name="toast_login_other_fillText">Please fill all the text field</string>
    <string name="toast_login_other_wrongpass">Please re-enter password</string>
    <string name="toast_internet_checking">Please check your network connection!</string>
    <string name="toast_operation_test">Please touch to row for operation test</string>
    <string name="toast_change_software">New software version is available. Please uninstall the old version and install the new one</string>
    <string name="notice_alarm">Press and hold the stop button in 3s to release</string>
    <string name="notice_alarm_demo">Press the stop button to release</string>
    <string name="intro_co">The sensing carbon monoxide gas according to various situations</string>
    <string name="intro_temperature">Measure the temperature change well</string>
    <string name="intro_smoke">Shows detect smoke</string>
    <string name="intro_share">Inform your emergency to your friends</string>
    <string name="login_welcome">Welcome to bulldi</string>
    <string name="login_use_title">Terms of Service</string>
    <string name="login_use_content">\nThese terms of service cover your activities on bulldi.com, our platform that enables people to create the change they want to see, and Change Politics, our platform that empowers voters to make informed election decisions (“platforms”). These platforms allow people to start and promote “campaigns”, which include petitions and fundraisers on bulldi.com, candidate questions and endorsements on Change Politics and related actions like creating and sharing content via our platforms and third-party sites and services.</string>
    <string name="login_privacy_title">Privacy Policy</string>
    <string name="login_privacy_content">\nAt bulldi, we respect the privacy of our clients. We do use information you provide to better serve your insurance needs. We also recognize that this information belongs to you and that we must treat it accordingly. The following statement spells out our privacy policy in more detail.</string>
    <string name="login_location_title">Operation Policy</string>
    <string name="login_location_content">\nYou acknowledge that you have read and accepted the terms of the Agreement. You agree to comply with all applicable laws, regulations and/or rules with regard to your use of bulldi, any updates to bulldi that bulldi may deliver to your mobile device (bulldi Updates), and any other services that bulldi performs for you under the Agreement (Services).</string>
    <string name="login_agreement">Your agree all our terms of use, privacy policy and cookie policy</string>
    <string name="login_facebook">Login facebook</string>
    <string name="login_instagram">Login instagram</string>
    <string name="login_kakaotalk">Login kakaotalk</string>
    <string name="login_other">Login with other</string>
    <string name="login_other_name">Name</string>
    <string name="login_other_email">Email</string>
    <string name="login_other_password">Password</string>
    <string name="login_other_reenter">Re-enter password</string>
    <string name="login_other_titlebar">Sign up</string>
    <string name="no_device">0 found device</string>
    <string name="num_device">device</string>
    <string name="num_devices">devices</string>
    <string name="num_found_device">found device</string>
    <string name="num_found_devices">found devices</string>
    <string name="bluetooth_scanning">Scanning...</string>
    <string name="bluetooth_scan">Bluetooth Scanning...</string>
    <string name="bluetooth_scan_sresult">Scanning Result</string>
    <string name="unknown_device">Unknown device</string>
    <string name="connecting">Connecting...</string>
    <string name="connecting_2">Connecting</string>
    <string name="wait">Please wait...</string>
    <string name="notify_friend_search">Search friend</string>
    <string name="notify_friend_sec1">Selected contacts</string>
    <string name="notify_friend_sec2">Contacts</string>
    <string name="session_out_notice">If you terminate your account, we will immediately withdraw treatment. Your personal information will be delete and will not be recovered.\n
        \nHowever, bulldi is always opened.
        \nIf you want, you can rejoin at any time to use bulldi service.\n
        \nOtherwise, fire-related data maybe used for public probe.
    </string>
    <string name="session_out_check">I have read and understood all the terms above, I agree with session out.</string>
    <string name="alias_intro">Please give a name for bulldi.\nBluetooth connectivity will be easier on the next time.
    </string>
    <string name="alias_hint">Input name</string>
    <string name="rule1_title">Terms of Service</string>
    <string name="rule2_title">Privacy Policy</string>
    <string name="rule3_title">Operation Policy</string>
</resources>