<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/DarkTurquoise"
    >
    <openstack.util.EditTextPlus
        android:id="@+id/name_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edittext"
        android:textSize="20dp"
        android:hint="@string/login_other_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        foo:customFont="Roboto-Regular.ttf"
        android:textColor="@color/Black"
        />
    <openstack.util.EditTextPlus
        android:id="@+id/mail_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edittext"
        android:textSize="20dp"
        android:hint="@string/login_other_email"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        foo:customFont="Roboto-Regular.ttf"
        android:textColor="@color/Black"
        />
    <openstack.util.EditTextPlus
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edittext"
        android:textSize="20dp"
        android:hint="@string/login_other_password"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        foo:customFont="Roboto-Regular.ttf"
        android:textColor="@color/Black"
        android:inputType="textPassword"
        />
    <openstack.util.EditTextPlus
        android:id="@+id/re_password_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edittext"
        android:textSize="20dp"
        android:hint="@string/login_other_reenter"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        foo:customFont="Roboto-Regular.ttf"
        android:textColor="@color/Black"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/greet_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_off1"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/button_signup"
        android:textSize="20dp"
        android:textColor="@color/White"/>



</LinearLayout>