<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/DarkTurquoise"
    >
    <openstack.util.TextViewPlus
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textSize="32dp"
        foo:customFont="Roboto-Regular.ttf"
        android:textColor="@color/White"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:textStyle="bold"
        />
    <openstack.util.TextViewPlus
        android:id="@+id/gretting_rule1"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:text="@string/rule1_title"
        android:textSize="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        foo:customFont="Roboto-Regular.ttf"
        android:textColor="@color/Black"
        android:layout_gravity="center"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:background="@drawable/text_border"
        android:clickable="true"
        android:onClick="onClick_rule1"  />
    <openstack.util.TextViewPlus
        android:id="@+id/gretting_rule2"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:text="@string/rule2_title"
        android:textSize="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        foo:customFont="Roboto-Regular.ttf"
        android:textColor="@color/Black"
        android:layout_gravity="center"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:background="@drawable/text_border"
        android:clickable="true"
        android:onClick="onClick_rule2" />
    <openstack.util.TextViewPlus
        android:id="@+id/gretting_rule3"
        android:layout_width="fill_parent"
        android:layout_height="95dp"
        android:text="@string/rule3_title"
        android:textSize="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        foo:customFont="Roboto-Regular.ttf"
        android:textColor="@color/Black"
        android:layout_gravity="center"
        android:paddingTop="7dp"
        android:paddingBottom="10dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:background="@drawable/text_border"
        android:clickable="true"
        android:onClick="onClick_rule3" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <openstack.util.CheckBoxImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/check_agree"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            app:checked_img="@drawable/but_agree_on"
            app:default_img="@drawable/but_agree_off"
            android:layout_gravity="center"
            android:layout_marginLeft="11.25dp"
            android:layout_marginRight="10dp"
            />
        <openstack.util.TextViewPlus
            android:id="@+id/agree_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_agreement"
            android:textSize="20dp"
            foo:customFont="Roboto-Regular.ttf"
            android:textColor="@color/White"
            android:layout_gravity="center" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <TableRow>

                        <ImageView
                            android:id="@+id/facebook_img"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/facebook_off"/>

                        <ImageView
                        android:id="@+id/instagram_img"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/instagram_off"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"/>
                    <ImageView
                        android:id="@+id/kakaotalk_img"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/kakatalk_off"/>
                    </TableRow>
                    <TableRow>
                        <openstack.util.TextViewPlus
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_facebook"
                            android:textSize="15dp"
                            foo:customFont="Roboto-Regular.ttf"
                            android:textColor="@color/White"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"/>
                        <openstack.util.TextViewPlus
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_instagram"
                            android:textSize="15dp"
                            foo:customFont="Roboto-Regular.ttf"
                            android:textColor="@color/White"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"/>
                        <openstack.util.TextViewPlus
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_kakaotalk"
                            android:textSize="15dp"
                            foo:customFont="Roboto-Regular.ttf"
                            android:textColor="@color/White"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            <openstack.util.TextViewPlus
                android:id="@+id/login_other"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_other"
                android:textSize="20dp"
                foo:customFont="Roboto-Regular.ttf"
                android:textColor="@color/White"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>



</LinearLayout>