<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">
    <openstack.util.TextViewPlus
        android:id="@+id/sessionOut_notice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_out_notice"
        android:textSize="21dp"
        android:textColor="@color/Black"
        android:textStyle="bold"
        foo:customFont="Roboto-Regular.ttf"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <openstack.util.CheckBoxImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sessionOut_checkbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            app:checked_img="@drawable/chk_on"
            app:default_img="@drawable/chk_off"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"

            />
        <openstack.util.TextViewPlus
            android:id="@+id/sessionOut_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_out_check"
            android:textSize="21dp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            foo:customFont="Roboto-Regular.ttf"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/session_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/button_sessionOut"
            android:textSize="20dp"
            android:textColor="@color/White"
            android:background="@drawable/button_die"/>
    </LinearLayout>

</LinearLayout>