<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/White">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/White">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icn_search"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <openstack.util.EditTextPlus
            android:id="@+id/searchContact"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:editable="true"
            android:textSize="17dp"
            foo:customFont="Roboto-Regular.ttf"
            android:hint="@string/notify_friend_search"
            android:background="#00000000"/>
        <ImageView
            android:id="@+id/delete_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/but_trash3"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightYellow">
    <openstack.util.TextViewPlus
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_friend_sec1"
        foo:customFont="Roboto-Regular.ttf"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>
    </LinearLayout>
    <ListView
        android:id="@+id/list_selected_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:background="@color/White"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightYellow">
        <openstack.util.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_friend_sec2"
            foo:customFont="Roboto-Regular.ttf"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>
    <ListView
        android:id="@+id/list_contact"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:cacheColorHint="#00000000"
        android:layout_weight="1"/>
<!--    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:onClick="showResult"
    android:text="Got result" >
</Button>-->

</LinearLayout>